# 2Dto3D

./: .gitattributes  .gitignore  AUTOMATION_README.md  CMakeLists.txt  DEMO_8_2MM.md  IMPLEMENTATION_SUMMARY.md  PIPELINE_8_2MM.md  README.md  STEREO_CALIBRATION_README.md  USAGE.md  comprehensive_experiment_report.py  config.yaml  corner_detection.cpp  corner_detection.h  cpp_integration_adapter.py  demo_8_2mm.cpp  demo_main.cpp  example.cpp  experiment_controller.py  image_resize.cpp  image_resize.h  integration_demo.py  main.cpp  model_viewer.cpp  model_viewer.h  mono_calibration.cpp  mono_calibration.h  report_generator.py  result_analyzer.py  run_demo.sh  step1_image_preprocessing.cpp  step2_corner_detection.cpp  step3_monocular_calibration.cpp  step4_stereo_rectification.cpp  step5_3d_reconstruction.cpp  stereo_calibration.cpp  stereo_calibration.h  stereo_calibration_program.cpp  stereo_calibration_program.h  stereo_reconstruction.cpp  (+3 more)
calibration_data/output/calibration/left/: camera_calibration.yml
calibration_data/output/calibration/right/: camera_calibration.yml
calibration_data/output/calibration/stereo/: stereo_calibration.yml
calibration_data/output/step3_left_calibration/: camera_calibration.yml
calibration_data/output/step3_right_calibration/: camera_calibration.yml
calibration_data/output/step4_stereo_calibration/: stereo_calibration.yml  stereo_rectify.yml
output/: experiment_report.md
output/step2_jiancejiaodian/right_jiaodian/corner_data/: corners.yml
output/step3_biaoding/right_calibration/: camera_calibration.yml
output/step4_shuangmu_biaoding/stereo_calibration/: stereo_calibration.yml  stereo_rectify.yml
output/step5_3D_reconstruction/: model_statistics.txt
output/step5_3D_reconstruction/3D_reconstruction/: reconstruction.ply
test_output/calibration/left/: camera_calibration.yml
test_output/calibration/right/: camera_calibration.yml
test_output/calibration/stereo/: stereo_calibration.yml
test_output/corners/right/corner_data/: corners.yml
